# flake-analysis-core

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/flake_core/: __init__.py  _compat.py
src/flake_core/annotations/: __init__.py  annotation_loader.py  rle_flake.py
src/flake_core/clustering/: __init__.py  engine.py
src/flake_core/color_classification/: __init__.py  loader.py
src/flake_core/image_processing/: __init__.py  background.py
src/flake_core/pipeline/: __init__.py  background.py  clustering.py  domain_proximity.py  domain_stats.py  selector.py
tests/: test_background_seed.py  test_clustering_determinism.py  test_clustering_wrapper.py  test_domain_stats_r7.py  test_imports.py  test_imports_pr11.py  test_imports_pr12.py  test_pair_distance_smoke.py  test_pipeline_smoke.py  test_progress_callback.py  test_selector_filter.py
